new changes adapt to simon's request

--- a/Test/app/src/main/res/values/strings.xml
+++ b/Test/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Handwriting Capturing</string>
     <string name="Sendstring">Send</string>
+    <string name="Next">Next</string>
+    <string name="StartNewTest">Start New Test</string>
     <string name="Cancelstring">Cancel</string>
 </resources>
